--- a/sass/global/_color.scss
+++ b/sass/global/_color.scss
@@ -19,6 +19,7 @@ global > color
   --color-border-primary: #c5ab5f;
   --color-border-white: #ffffff;
   --color-font-gray: #c7c7c7;
+  --color-font-gray-light: #666666;
   --color-font-white: #ffffff;
   --color-font-base: #000000;
 }
