--- a/sass/component/_button.scss
+++ b/sass/component/_button.scss
@@ -11,7 +11,7 @@ component > button
   font-size: 14px;
   font-weight: 500;
   display: inline-block;
-  transition: background-color 0.3s;
+  transition: background-color 1.0s;
   border-radius: 100px;
 
   &:hover {
@@ -41,8 +41,11 @@ component > button
   width: 100%;
   max-width: 95px;
   height: 24px;
-  display: grid;
-  place-items: center;
+  text-align: center;
+  background-color: var(--color-bg-green);
+  border-radius: 100px;
+  color: var(--color-font-white);
+  font-size: 12px;
 }
 
 .c-button--size-medium {
