top_posts_1_revision

--- a/sass/page/_index.scss
+++ b/sass/page/_index.scss
@@ -1,5 +1,5 @@
 @forward "top/top-kv";
-@forward "top/top-pop";
+@forward "top/top-posts";
 @forward "single";
 @forward "page";
 @forward "contact";
