--- a/css/style.css
+++ b/css/style.css
@@ -1091,40 +1091,40 @@ page > top
   }
 }
 
-.top-pop {
+.top-post {
   max-width: 324px;
   height: 274px;
   margin: 0 auto;
 }
 
-.top-pop-type {
+.top-post-type {
   display: flex;
   justify-content: space-between;
 }
 
-.top-pop-day {
+.top-post-day {
   font-size: 12px;
   color: var(--color-font-gray-light);
 }
 
-.top-pop-img-sp {
+.top-post-img-sp {
   margin-top: 8px;
   transition: 0.3s;
 }
-.top-pop-img-sp:hover {
+.top-post-img-sp:hover {
   transform: scale(1.05);
 }
 @media (width >= 768px) {
-  .top-pop-img-sp {
+  .top-post-img-sp {
     display: none;
   }
 }
 
-.top-pop-img {
+.top-post-img {
   display: none;
 }
 
-.top-pop p {
+.top-post p {
   font-size: 18px;
   font-weight: bold;
 }
