--- a/sass/page/top/_top-kv.scss
+++ b/sass/page/top/_top-kv.scss
@@ -8,7 +8,7 @@ page > top
 .top-kv {
   width: 100%;
   padding: 56px 0 8px 0;
-  background-image: url(../../img/top/bg-pattern-kv@2x.png);
+  background-image: url(../img/top/bg-pattern-kv@2x.png);
   background-size: auto;
   background-repeat: repeat;
   text-align: center;
