--- a/sass/page/top/_top-posts.scss
+++ b/sass/page/top/_top-posts.scss
@@ -1,9 +1,20 @@
 @use "../../global/" as g;
 
+.top-posts {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 40px;
+}
+
 .top-post {
   max-width: 324px;
   height: 274px;
   margin: 0 auto;
+
+  @include g.min(md) {
+    max-width: 344px;
+    height: 292px;
+  }
 }
 
 .top-post-type {
@@ -32,9 +43,33 @@
 
 .top-post-img {
   display: none;
+
+  @include g.min(md) {
+    display: block;
+    margin-top: 8px;
+    transition: 0.3s;
+    max-width: 100%;
+  }
 }
 
 .top-post h2{
   font-size: 18px;
   font-weight: bold;
+
+  @include g.min(md) {
+    font-size: 20px;
+  }
+}
+
+.top-pagination {
+  list-style: none;
+  display: flex;
+  gap: 8px;
+  justify-content: center;
+}
+
+.top-pagination li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
