--- a/sass/page/top/_top-posts.scss
+++ b/sass/page/top/_top-posts.scss
@@ -4,12 +4,28 @@
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   gap: 40px;
+
+  @include g.min(md) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @include g.min(xl) {
+    grid-template-columns: repeat(3, 1fr);
+    max-width: 1080px;
+    gap: 40px 24px;
+  }
 }
+
 
 .top-post {
   max-width: 324px;
   height: 274px;
   margin: 0 auto;
+  transition: 0.3s;
+
+  & img:hover {
+    transform: scale(1.05);
+  }
 
   @include g.min(md) {
     max-width: 344px;
@@ -66,10 +82,15 @@
   display: flex;
   gap: 8px;
   justify-content: center;
+  margin-top: 40px;
 }
 
 .top-pagination li {
   display: flex;
   justify-content: center;
   align-items: center;
+
+  &:hover{
+    opacity: 0.5;
+  }
 }
